coms
const int BTN1_PIN = 18;
const unsigned long DEBOUNCE_MS = 20;

bool stable = HIGH;          // HIGH = losgelassen, LOW = gedrückt
bool lastRead = HIGH;
unsigned long tChange = 0;

void setup() {
  Serial.begin(115200);
  pinMode(BTN1_PIN, INPUT_PULLUP);
  delay(200);
  Serial.println("READY");
}

void loop() {
  bool r = digitalRead(BTN1_PIN);
  unsigned long now = millis();

  if (r != lastRead) {
    lastRead = r;
    tChange = now;
  }

  if ((now - tChange) > DEBOUNCE_MS && r != stable) {
    stable = r;
    if (stable == LOW) Serial.println("B1_DOWN");
    else               Serial.println("B1_UP");
  }
}


xcode-select: note: No developer tools were found, requesting install.
If developer tools are located at a non-default location on disk, use `sudo xcode-select --switch path/to/Xcode.app` to specify the Xcode that you wish to use for command line developer tools, and cancel the installation dialog.
See `man xcode-select` for more details.
exit status 1

Compilation error: exit status 1
(venv-pio) cze@XLDE-Reaction:~/reaction-proto-esp32 $ python3 - <<'PY'
import serial
ser = serial.Sserial('/dev/ttyUSB0', 115200, timeout=1)
print("listening on /dev/ttyUTSB0 ...")

while True: 
line = ser.readline().decode(errors='ignore').strip()
if line: 
print(line)
PY
  File "<stdin>", line 6
    line = ser.readline().decode(errors='ignore').strip()
    ^^^^
IndentationError: expected an indented block after 'while' statement on line 5
(venv-pio) cze@XLDE-Reaction:~/reaction-proto-esp32 $ 
